# altius

./: .gitattributes  Cargo.toml  LICENSE  Makefile  README.md  bench.sh  run.sh  run_cpu.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
altius-py/: .gitignore  Cargo.toml  bert.py  deit.py  efficientformer.py  export-fugumt.sh  fcn.py  gpt2.py  mobilenet-imagenet.py  pyproject.toml  real-esrgan.py  requirements.txt  resnet50.py  show-ort-profile.py  test.py  test.sh  test_ops.py  test_ops_elemwise.py  translation.py  vit.py  yolo.py  yolov5.py
altius-py/altius_py/: __init__.py
altius-py/src/: lib.rs
altius-py/tests/: test.rs  test_ops_bin.py  test_ops_concat.py  test_ops_conv.py  test_ops_elemwise.py  test_ops_gemm.py  test_ops_matmul.py  test_ops_norm.py  test_ops_pool.py  test_ops_reduce.py  test_ops_transpose.py  test_ops_where.py
core/: Cargo.toml  build.rs
core/examples/: MNIST_test.txt  add1  add2  add3  conv1  conv2  input2  input7  reshape1
core/src/: dim.rs  graph.rs  lib.rs  model.rs  node.rs  onnx.rs  op.rs  shape_inferer.rs  symdim.rs  tensor.rs  value.rs
core/src/analysis/: elemwise_fusion.rs  mod.rs  shape.rs
core/src/onnx/: load.rs  mod.rs  save.rs
core/src/onnx/snapshots/: altius_core__onnx__save__save_onnx.snap
core/src/optimize/: conv_act_fusion.rs  elemwise_fusion.rs  fast_gelu_fusion.rs  gelu_fusion.rs  layer_norm_fusion.rs  matmul_add_fusion.rs  mod.rs  transpose_fusion.rs
core/src/snapshots/: altius_core__model__mnist_model.snap  altius_core__model__mnist_model2.snap  altius_core__tensor__dump_i64_tensor.snap
crates/altius-py/: Cargo.toml  deeplab.py  deit.py  export-bert.sh  export-fugumt.sh  export-tinystories.sh  export_vit.py  fastvit.py  fuse_attn.py  gpt2.py  mandelbrot.py  mobilenet.py  pyproject.toml  resnet50.py  test.sh  vit.py  yolov5.py
crates/altius-py/src/: lib.rs
crates/altius-py/tests/: test_ops_concat.py  test_ops_elemwise.py  test_ops_gemm.py  test_ops_matmul.py  test_ops_norm.py  test_ops_reduce.py
crates/altius_py/: Cargo.toml  bert.py  deit.py  export-gpt2.sh  export_vit.py  fastvit.py  fcn.py  gpt2.py  mobilenet.py  pyproject.toml  real-esrgan.py  resnet50.py  test.sh  yolov5.py
crates/altius_py/src/: lib.rs
crates/altius_py/tests/: test_ops_bin.py  test_ops_elemwise.py  test_ops_gather.py  test_ops_reduce.py  test_ops_resize.py  test_ops_transpose.py
crates/core/: Cargo.toml  build.rs
crates/core/src/: dim.rs  flops.rs  graph.rs  lib.rs  model.rs  op.rs  tensor.rs  value.rs
crates/core/src/analysis/: shape.rs
crates/core/src/onnx/: load.rs  save.rs
crates/core/src/onnx/snapshots/: altius_core__onnx__save__save_onnx.snap
crates/core/src/optimize/: conv_act_fusion.rs  elemwise_fusion.rs  fast_gelu_fusion.rs  gelu_fusion.rs  identity_elim.rs  mod.rs
crates/core/src/snapshots/: altius_core__tensor__dump_bool_tensor.snap  altius_core__tensor__dump_f32_tensor.snap  altius_core__tensor__dump_i32_tensor.snap
crates/session/: Cargo.toml
crates/session-cpu/: Cargo.toml
crates/session-cpu/examples/: deit_cpu.rs  mnist_cpu.rs  mobilenet_cpu.rs  vit_cpu.rs
crates/session-cpu/src/: builder.rs  translator.rs
crates/session-cpu/tests/: binop.rs  ops_bin.rs  ops_conv.rs
crates/session-interpreter/: Cargo.toml
crates/session-interpreter/benches/: interpreter.rs
crates/session-interpreter/examples/: deit.rs  infer.rs  mnist.rs  vit.rs
crates/session-interpreter/src/: builder.rs  conv2d.rs  session.rs
crates/session/src/: lib.rs  plan.rs
crates/session/tests/: ort.rs
crates/session_clang/: Cargo.toml
crates/session_clang/examples/: deit_cpu.rs  mnist_cpu.rs  mobilenet_cpu.rs  vit_cpu.rs
crates/session_clang/src/: builder.rs  lib.rs  session.rs  translator.rs
crates/session_clang/tests/: ops_bin.rs  ops_conv.rs
crates/session_cpu/: Cargo.toml
crates/session_cpu/examples/: vit_cpu.rs
crates/session_cpu/src/: session.rs  translator.rs
crates/session_interpreter/: Cargo.toml
crates/session_interpreter/examples/: deit.rs  mobilenet.rs
crates/session_interpreter/src/: conv2d.rs  fast_math.rs  lib.rs  session.rs  thread.rs
crates/session_interpreter/tests/: mobilenet.rs
crates/wasm/: Cargo.toml  package.json  webpack.config.ts
crates/wasm/src/: index.tsx  lib.rs
crates/wasm/static/: index.html
interpreter/: Cargo.toml
interpreter/examples/: mnist.rs  mobilenet-imagenet.rs  mobilenet.rs  yolo.rs
interpreter/examples/mnist/: add1  add2  add3  conv1  conv2  input2  input7  reshape1
interpreter/src/: conv2d.rs  lib.rs
interpreter/tests/: mobilenet.rs
models/: README.md  deeplab_mobilenetv3.onnx  download.sh  fcn-resnet50.onnx  mobilenetv3.onnx
onnx/: Cargo.toml
onnx/src/: lib.rs
session/: Cargo.toml
session-cpu/: Cargo.toml
session-cpu/examples/: deit_cpu.rs  mnist_cpu.rs  mobilenet_cpu.rs
session-cpu/src/: lib.rs  session.rs  translator.rs
session-interpreter/: Cargo.toml
session-interpreter/benches/: interpreter.rs
session-interpreter/examples/: deit.rs  mnist.rs  mobilenet.rs  vit.rs
session-interpreter/src/: fast_math.rs  lib.rs  session.rs
session-interpreter/tests/: mobilenet.rs  op_bin.rs
session/benches/: interpreter.rs
session/examples/: _mobilenet_cpu.rs  deit.rs  deit_cpu.rs  infer.rs  mnist.rs  mnist_cpu.rs  mobilenet.rs  mobilenet_cpu.rs  vit.rs
session/src/: conv2d.rs  lib.rs  plan.rs
session/src/cpu/: builder.rs  codegen.rs  conv2d.rs  mod.rs  session.rs  translator.rs
session/src/interpreter/: builder.rs  conv2d.rs  exp.rs  fast_math.rs  gemm.rs  mod.rs  session.rs  thread.rs
session/src/opencl/: builder.rs  mod.rs  session.rs  tensor.rs
session/src/wgpu/: mod.rs
session/tests/: mobilenet.rs  op_bin.rs  op_elemwise.rs
snippets/: float.c  onnx_float16.py  q.cc  softmax.c  softmax.cc  test_nchwc.py
snippets/coreml/: mobilenet.py  requirements.txt
snippets/cuda/: Makefile  cuda-gemm-act.cu  main.c
snippets/sgemm/: Makefile  gemm.deit.cc  main.cc
wasm/: Cargo.toml  index.html  package.json  tsconfig.json
wasm/src/: index.tsx  lib.rs
wasm/static/: index.css  index.html
(+1 files in other folders)
