[workspace]
members = [
  "crates/core",
  "crates/session",
  "crates/session-cpu",
  "crates/session-interpreter",
  "crates/altius-py",
  "crates/wasm"
]
resolver = "2"

[workspace.dependencies]
thiserror = "^1.0.31"
log = "^0.4.17"
rustc-hash = "^1.1.0"

[profile.release]
opt-level = 3
overflow-checks = false
codegen-units = 8
debug = true
