[workspace]
members = [
  "crates/core",
  "crates/session",
  "crates/session_cpu",
  "crates/session_interpreter",
  "crates/altius_py",
  "crates/wasm"
]
resolver = "2"

[workspace.dependencies]
thiserror = "^1.0.31"
log = "^0.4.17"
rustc-hash = "^1.1.0"
cranelift = "^0.111.0"
cranelift-module = "^0.111.0"
cranelift-object = "^0.111.0"
cranelift-codegen = "^0.111.0"
ndarray = "^0.15.6"

[profile.release]
opt-level = 3
overflow-checks = false
codegen-units = 8
debug = true
