[package]
name = "altius-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "altius_py"
crate-type = ["cdylib"]

[dependencies]
altius-core = { path = "../core" }
altius-session = { path = "../session" }
altius-session-cpu = { path = "../session-cpu" }
pyo3 = { version = "^0.17.3", features = ["extension-module"] }
pyo3-log = "^0.7.0"
numpy = "^0.17.0"

[dev-dependencies]
cargo-util = "^0.2.1"

[features]
matrixmultiply-threading = [ "altius-session/matrixmultiply-threading" ]
cuda = [ "altius-session/cuda" ]
heavy-log = [ "altius-session/heavy-log" ]
