[build-system]
requires = ["maturin>=0.15"]
build-backend = "maturin"

[project]
name = "altius-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pip~=23.1.2", "matplotlib==3.5.2", "Pillow==9.2.0", "torchvision==0.13.0", "torch==1.12.0", "maturin~=0.15.1", "pytest~=7.3.1", "pytest-xdist~=3.2.1", "onnxruntime==1.13.1", "onnx==1.12.0", "transformers[onnx]~=4.28.1", "onnxsim==0.4.17", "numpy==1.22.3"]

