[package]
name = "altius-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-arena = "2.2.1"
rustc-hash = "1.1.0"
prost = "^0.10"
thiserror = "1.0.31"
log = "0.4.17"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = { version = "0.1.29", default-features = false, features = ["local_dynamic_tls"] }

[build-dependencies]
prost-build = "^0.10"

[dev-dependencies]
insta = "1.14.1"
