[package]
name = "altius-interpreter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altius-core = { path = "../core" }
log = "0.4.17"
rustc-hash = "1.1.0"
ndarray = "0.15.4"
convolutions-rs = { git = "https://github.com/Conzel/convolutions-rs" }

[dev-dependencies]
env_logger = "0.9.0"
image = "0.24.2"
rayon = "*"
structopt = "0.3.26"
