[package]
name = "altius-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altius-core = { path = "../core" }
log = "0.4.17"
rustc-hash = "1.1.0"
cudnn = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
ndarray = "0.15.4"

[features]
cuda = ["cudnn", "cust"]

[dev-dependencies]
env_logger = "0.9.0"
image = "0.24.2"
rayon = "*"
structopt = "0.3.26"
