[package]
name = "altius-session-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
rustc-hash = { workspace = true }
altius-core = { path = "../core" }
altius-session = { path = "../session" }
ndarray = "0.15.6"
core_affinity = "^0.7.6"
matrixmultiply = "0.3.2"
fastapprox = "^0.3.0"
thread_local = "^1.1"
paste = "1.0.11"
threadpool = "^1.8.1"
cblas-sys = "0.1.4"

[target.'cfg(target_os = "linux")'.dependencies]
blis-src = { version = "*", features = [ "openmp" ], default-features = false }
procfs = "0.14.2"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.8", features = ["accelerate"] }

[features]
default = ["cblas"]
matrixmultiply-threading = ["matrixmultiply/threading"]
cblas = []
heavy-log = []

[dev-dependencies]
color-backtrace = "0.5.1"
env_logger = "0.9.0"
image = "0.24.2"
structopt = "0.3.26"
criterion = "0.4.0"

[[bench]]
name = "interpreter"
harness = false
