[package]
name = "altius-session"
version = "0.1.0"
edition = "2021"

[dependencies]
altius-core = { path = "../core" }
log = { workspace = true }
rustc-hash =  { workspace = true }
cudnn = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
ndarray = "0.15.6"
matrixmultiply = "0.3.2"
thiserror = { workspace = true }
blas-src = { version = "0.8", optional = true }
blis-src = { version = "*", features = [ "openmp" ], default-features = false, optional = true }
cblas-sys = { version = "*", optional = true }
fastapprox = "^0.3.0"
threadpool = "^1.8.1"
thread_local = "^1.1"
core_affinity = "^0.7.6"
wgpu = { version = "^0.14.0", optional = true }
futures-intrusive = { version = "^0.4", optional = true }
pollster = { version = "^0.2.5", optional = true }
bytemuck = { version = "^1.12.1", optional = true }
opencl3 = { version = "^0.9.1", optional = true }

[target.'cfg(linux)'.dependencies]
procfs = "0.14.2"

[features]
cuda = ["cudnn", "cust"]
matrixmultiply-threading = ["matrixmultiply/threading"]
openblas = ["blas-src/openblas", "cblas"]
blis = ["blis-src", "cblas"]
accelerate = ["blas-src/accelerate", "cblas"]
cblas = ["cblas-sys"]
opencl = ["opencl3"]
wgpu-backend = ["wgpu"]
heavy-log = []

[dev-dependencies]
env_logger = "0.9.0"
image = "0.24.2"
structopt = "0.3.26"
