[package]
name = "altius-session"
version = "0.1.0"
edition = "2021"

[dependencies]
altius-core = { path = "../core" }
log = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
cudnn = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
opencl3 = { version = "^0.9.1", optional = true }
libloading = "0.7.4"
cranelift-module = "^0.97.0"

[target.'cfg(target_os = "linux")'.dependencies]
blis-src = { version = "*", features = [ "openmp" ], default-features = false }
procfs = "0.14.2"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.8", features = ["accelerate"] }

[features]
default = ["cblas"]
cuda = ["cudnn", "cust"]
opencl = ["opencl3"]
x64-codegen = []
cblas = []

[dev-dependencies]
color-backtrace = "0.5.1"
env_logger = "0.9.0"
image = "0.24.2"
structopt = "0.3.26"
criterion = "0.4.0"

[[bench]]
name = "cpu"
harness = false
