[package]
name = "altius-session"
version = "0.1.0"
edition = "2021"

[dependencies]
altius-core = { path = "../core" }
log = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
cudnn = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
libloading = "0.7.4"
cranelift-module = "^0.97.0"

[features]
cuda = ["cudnn", "cust"]

[dev-dependencies]
color-backtrace = "0.5.1"
env_logger = "0.9.0"
image = "0.24.2"
structopt = "0.3.26"
criterion = "0.4.0"
