[package]
name = "altius-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
altius-core = { path = "../core" }
altius-session = { path = "../session" }
altius-session-interpreter = { path = "../session-interpreter" }
console_error_panic_hook = "0.1.7"
image = "0.24.2"
ndarray = "0.15.6"
