[package]
name = "altius-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "altius_py"
crate-type = ["cdylib"]

[dependencies]
altius-core = { path = "../core" }
altius-session = { path = "../session" }
altius-session-cpu = { path = "../session-cpu" }
altius-session-interpreter = { path = "../session-interpreter" }
pyo3 = { version = "^0.20.0", features = ["extension-module"] }
pyo3-log = "^0.9.0"
numpy = "^0.20.0"

[dev-dependencies]
cargo-util = "^0.2.1"

[features]
default = ["cblas"]
matrixmultiply-threading = [ "altius-session-interpreter/matrixmultiply-threading" ]
cuda = [ "altius-session-interpreter/cuda" ]
heavy-log = [ "altius-session-interpreter/heavy-log" ]
cblas = []
