[package]
name = "altius_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "altius_py"
crate-type = ["cdylib"]

[dependencies]
altius-core = { path = "../core" }
altius_session = { path = "../session" }
altius_session_clang = { path = "../session_clang" }
altius_session_interpreter = { path = "../session_interpreter" }
pyo3 = { version = "^0.20.0", features = ["extension-module"] }
pyo3-log = "^0.9.0"
numpy = "^0.20.0"

[dev-dependencies]
cargo-util = "^0.2.1"

[features]
default = ["cblas"]
matrixmultiply-threading = [ "altius_session_interpreter/matrixmultiply-threading" ]
cuda = [ "altius_session_interpreter/cuda" ]
heavy-log = [ "altius_session_interpreter/heavy-log" ]
cblas = []
