[package]
name = "altius-core"
version = "0.1.0"
edition = "2021"

[dependencies]
id-arena = "^2.2.1"
rustc-hash =  { workspace = true }
prost = "^0.10"
thiserror = { workspace = true }
log = { workspace = true }
rand = "^0.8.5"
ndarray = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = { version = "0.1.29", default-features = false, features = ["local_dynamic_tls"] }

[build-dependencies]
prost-build = "^0.10"

[dev-dependencies]
insta = "^1.14.1"
