[package]
name = "altius-core"
version = "0.1.0"
edition = "2024"

[dependencies]
id-arena = "^2.2.1"
rustc-hash =  { workspace = true }
prost = "^0.10"
thiserror = { workspace = true }
log = { workspace = true }
rand = "^0.8.5"
ndarray = { workspace = true }

[build-dependencies]
prost-build = "^0.10"

[dev-dependencies]
insta = "^1.14.1"
