[package]
name = "altius_session_clang"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
rustc-hash = { workspace = true }
altius-core = { path = "../core" }
altius_session = { path = "../session" }
cranelift = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
cranelift-codegen = { workspace = true }
libloading = "^0.8.1"
indent = "0.1.1"
sha1 = "0.10.5"
glob = "0.3.1"
num_cpus = "1.15.0"
target-lexicon = "^0.12.7"
tempfile = "^3.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
blis-src = { version = "*", features = [ "openmp" ], default-features = false }

[dev-dependencies]
ndarray = "0.15.6"
color-backtrace = "0.5.1"
env_logger = "0.9.0"
image = "0.24.2"
structopt = "0.3.26"
criterion = "0.4.0"
ort = "2.0.0-rc.10"
rayon = "1.8.0"
