[package]
name = "altius_session_interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
rustc-hash = { workspace = true }
altius-core = { path = "../core" }
altius_session = { path = "../session" }
ndarray = "0.15.6"
core_affinity = "^0.7.6"
matrixmultiply = "0.3.2"
fastapprox = "^0.3.0"
thread_local = "^1.1"
paste = "1.0.11"
threadpool = "^1.8.1"
cblas-sys = "0.1.4"
cudnn = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = { version = "0.1.29", default-features = false, features = ["local_dynamic_tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
blis-src = { version = "*", features = [ "openmp" ], default-features = false }
procfs = "0.14.2"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.8", features = ["accelerate"] }

[features]
default = ["cblas"]
matrixmultiply-threading = ["matrixmultiply/threading"]
cblas = []
heavy-log = []
cuda = ["cudnn", "cust"]

[dev-dependencies]
color-backtrace = "0.5.1"
env_logger = "0.9.0"
image = "0.24.2"
structopt = "0.3.26"
criterion = "0.4.0"

[[bench]]
name = "interpreter"
harness = false
